<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <Button
        android:id="@+id/one_m_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/one_m_1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/one_m_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/one_m_2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/one_m_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/one_m_3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/two_m_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/two_m_1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/two_m_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/two_m_2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/two_m_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/two_m_3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/structure_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/structure_factor"
        style="@style/Widget.AppCompat.Button.Colored"
        android:elevation="@dimen/dimenButtonElevation"
        android:stateListAnimator="@null" />

</LinearLayout>