<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.45"
               android:gravity="top"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:text="@string/text"
                   android:textAlignment="center"
                   android:textColor="@android:color/black"
                   android:textSize="12sp" />

               <EditText
                   android:id="@+id/m"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:digits="1234567890.-,"
                   android:inputType="numberSigned|numberDecimal" />

           </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/bigger"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/bigger" />

                <RadioButton
                    android:id="@+id/equal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/equal" />

                <RadioButton
                    android:id="@+id/smaller"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/smaller" />

            </RadioGroup>

            <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="top"
               android:layout_weight="0.45"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:text="@string/text2"
                   android:textAlignment="center"
                   android:textColor="@android:color/black"
                   android:textSize="12sp" />

               <EditText
                   android:id="@+id/m0"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:digits="1234567890.-,"
                   android:inputType="numberSigned|numberDecimal" />

           </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type41"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/other_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890.-,"
            android:inputType="numberSigned|numberDecimal" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:elevation="@dimen/dimenButtonElevation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/output"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/u_alpha_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/type_u_alpha"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/u_alpha_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890.-,"
            android:inputType="numberSigned|numberDecimal" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:elevation="@dimen/dimenButtonElevation" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="10dp"/>

    </LinearLayout>

</ScrollView>