<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/average_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_average_and_deviation"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/average_edit_text"
                android:autofillHints=""
                android:inputType="numberSigned|numberDecimal"
                android:minHeight="16dp"
                android:digits="1234567890.-,"
                />

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/average_string_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/output"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/average_output_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/write_u_alpha_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/t_alpha"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/write_t_alpha_edit_text"
                android:autofillHints=""
                android:inputType="numberSigned|numberDecimal"
                android:minHeight="16dp"
                android:digits="1234567890.-,"
                />

            <Button
                android:id="@+id/calculate_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_m"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/output_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

</ScrollView>
